src/test/deca/syntax/invalid/unterminated_comment.deca

{
    x = 1; 
    /*dommage, commentaire non fermé ><
}